# ADE

./: .eslintrc.cjs  .gitattributes  .gitignore  AGENTS.md  README.md  changes.patch  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  probe-ci.yml
.scripts/: post-init.sh
actions/probe-ci/: action.yml
apps/ade-tauri/: index.html  package.json  tsconfig.json
apps/ade-tauri/scripts/: build.mjs
apps/ade-tauri/src/: App.tsx  styles.css
apps/ade-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/ade-tauri/src-tauri/src/: main.rs  terminal.rs
docs/: CNAME  index.md
docs/bo4/: README.md  bo4.run.yaml
docs/bo4/prompts/: bo4-implement-variant.yaml  bo4-meta-review.yaml  (+1 more)
docs/design_intent/: ade.m1.concepts.yaml  ade.m1.files.yaml  ade.m1.layout.yaml  ade.m1.terminals.yaml  ade.m2.crosswalk.yaml  ade.m2.detectors.yaml  ade.m2.l1suite.yaml  ade.m2.oracles.yaml  ade.m3.cloudbridge.yaml  ade.m3.conceptualdiff.yaml  ade.m3.githubmcp.yaml  ade.m3.workflow.yaml  ade.m3.worktrees.yaml  ade.m4.cards.yaml  ade.m4.cdpsafety.yaml  ade.m4.guardrails.yaml  ade.m4.prhealth.yaml
docs/plan/: README.md  ade.plan.json  ade.plan.yaml  history.md  plan.schema.json  progress.md
docs/prompt_meta/: guidelines.general.json  lessons.json
docs/prompt_schemas/: coder.yaml
experiments/pathprobe/: README.md  probe_run.sh
kit/scripts/: prove.sh
legacy/ade-v0/: README.md  install.sh
scripts/cloud/: env.sh
tools/: engine-smoke.ts
tools/migrate/: quarantine.sh
tools/orchestrator/: README.md  plan-run.mjs  render-prompt.mjs
(+19 files in other folders)
